--- a/scss/_util.scss
+++ b/scss/_util.scss
@@ -31,3 +31,7 @@
 .align-items\:center {
   align-items: center;
 }
+
+.overflow\:visible {
+  overflow: visible;
+}
